# ClippyBox

./: .env  .env.example  .gitignore  LICENSE  README.md  install.sh  main.py  pyproject.toml  requirements.txt
docs/homebrew/: clippybox.rb
docs/superpowers/plans/: 2026-04-01-homebrew-onboarding.md  2026-04-01-pywebview-panel.md
docs/superpowers/specs/: 2026-04-01-homebrew-onboarding-design.md  2026-04-01-pywebview-panel-redesign.md
src/: ai.py  overlay_process.py  panel.py  system_prompt.txt
src/clippybox/: __init__.py  __main__.py  ai.py  overlay_process.py  panel.py  preflight.py
src/clippybox/data/: panel.html
