[project]
name = "clippybox"
version = "0.1.0"
description = "Point at anything on your screen and instantly understand it."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "Pillow>=10.0.0",
    "pynput>=1.7.6",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
]

[project.scripts]
clippybox = "clippybox.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clippybox = ["data/system_prompt.txt"]